testing new remote url

--- a/index.html
+++ b/index.html
@@ -3,19 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>Weight Visualizer</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js">
     <script src="./src/index.js"></script>
-    <link rel="stylesheet" type="text/css" href="semantic/dist/semantic.min.css">
-    <script
-      src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous">
-    </script>
-    <script src="semantic/dist/semantic.min.js"></script>
   </head>
   <body>
-    <h1 id="header" class="text-center">Weight Visualizer</h1>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
-    
+    <h1 id="header">Weight Visualizer</h1>
+
+    <canvas id="simple-agario" width="900" height="900" style="border:1px solid #000000"></canvas>
   </body>
 </html>
