--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
     <h1 id="header">Weight Visualizer</h1>
-    <div class="ui input">
-      <input id="weight" type="number" >
+    <div style="text-align:center">
+      <input id="weight" type="number"></input>
+      <canvas style="background-color:black;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
     </div>
-    <canvas id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
   </body>
 </html> 
