--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
-    <h1 id="header">Weight Visualizer</h1>
+    <h1 id="header">Bar Is Loaded</h1>
     <div style="text-align:center">
       <input id="weight" type="number"></input>
       <canvas style="background-color:black;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
