--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div style="text-align:center">
       <h1 id="header">Bar Is Loaded</h1>
-      <input id="weight" type="number"></input>
+      <input id="weight" type="number" min="25"></input>
       <canvas style="background-color:#e6e6e6;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
     </div>
   </body>
