need to fix positioning

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Weight Visualizer</title>
+    <title>thing</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js">
     <script src="./src/index.js"></script>
   </head>
@@ -11,7 +11,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
 
     <div style="text-align:center">
-      <h1 id="header">Bar Is Loaded</h1>
+      <h1 id="header">thing</h1>
       <input id="weight" type="number" min="25"></input>
       <canvas style="background-color:#e6e6e6;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
     </div>
