unit conversion with button started

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <div class="ui icon input">
         <input id="weight" type="number" min="25"></input>
       </div>
+      <button class="ui button" id="units">Kilograms</button>
       <canvas style="background-color:#e6e6e6;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
     </div>
   </body>
