--- a/index.html
+++ b/index.html
@@ -14,6 +14,23 @@
         <input id="weight" type="number" min="25"></input>
       </div>
       <button class="ui button" id="units">Kilograms</button>
+      <div class="ui form">
+        <div class="inline fields">
+          <label>Units:</label>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency" checked="checked">
+              <label>Kilograms</label>
+            </div>
+          </div>
+          <div class="field">
+            <div class="ui radio checkbox">
+              <input type="radio" name="frequency">
+              <label>Pounds</label>
+            </div>
+          </div>
+        </div>
+      </div>
       <canvas style="background-color:#e6e6e6;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
     </div>
 
