styling, also need to make canvas responsive

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Bar is Loaded</title>
+    <link rel="stylesheet" type="text/css" href="./src/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <script src="./src/index.js"></script>
   </head>
@@ -10,35 +11,43 @@
     <div style="text-align:center">
       <h1 id="header">Bar is Loaded</h1>
 
-      <div class="ui raised center aligned segment">
-        <div class="ui form">
-          <div class="field">
-            <label>Weight</label>
-            <input id="weight" type="number" min="25"></input>
-          </div>
-          <div class="inline fields">
-            <label>Units:</label>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="unit" id="kg" checked="checked">
-                <label>Kilograms</label>
+       
+      <div class="ui three column centered grid">
+        <div class="column">
+          <div class="ui raised segment">
+            <div class="ui form">
+              <div class="field">
+                <label>Weight</label>
+                <input id="weight" type="number" min="25"></input>
+              </div>
+              <div class="inline fields">
+                <label>Units:</label>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="unit" id="kg" checked="checked">
+                    <label>Kilograms</label>
+                  </div>
+                </div>
+                <div class="field">
+                  <div class="ui radio checkbox">
+                    <input type="radio" name="unit" id="lb">
+                    <label>Pounds</label>
+                  </div>
+                </div>
               </div>
             </div>
-            <div class="field">
-              <div class="ui radio checkbox">
-                <input type="radio" name="unit" id="lb">
-                <label>Pounds</label>
-              </div>
-            </div>
+          </div>  
+        </div>
+
+        <div class="fifteen wide column">
+          <div class="ui segment raised" style="text-align:center">
+            <canvas style="background-color:white;" id="visualizer" width="780" height="500" style="border:1px solid #000000"></canvas>
           </div>
         </div>
       </div>
-      <div class="ui segment">
 
-        <canvas style="background-color:#e6e6e6;" id="visualizer" width="800" height="500" style="border:1px solid #000000"></canvas>
-      </div>
+   
+
     </div>
-
-
   </body>
 </html> 
