--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Bar is Loaded</title>
-    <link rel="stylesheet" type="text/css" href="./src/style.css">
+    <link rel="stylesheet" type="text/css" href="./styling/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <script src="./src/index.js"></script>
   </head>
@@ -12,7 +12,7 @@
       <h1 id="header">Bar is Loaded</h1>
 
        
-      <div class="ui three column centered grid">
+      <div class="ui four column centered grid">
         <div class="column">
           <div class="ui raised segment">
             <div class="ui form">
@@ -39,15 +39,39 @@
           </div>  
         </div>
 
-        <div class="fifteen wide column">
-          <div class="ui segment raised" style="text-align:center">
+        <div class="fifteen wide column" style="text-align:center;">
             <canvas style="background-color:white;" id="visualizer" width="780" height="500" style="border:1px solid #000000"></canvas>
-          </div>
         </div>
       </div>
 
-   
-
+      <div class="ui two column centered grid">
+        <div class="column">
+          <div class="ui segment raised">
+            <div class="ui small header" style="text-align:center;">Instructions</div>
+            <div class="ui divider"></div>
+            <ul>
+              <li>
+                Enter the desired weight and select your preferred units
+              </li>
+              <li>
+                The gray block at the end of the weights represents a 2.5kg/5.5lb collar
+              </li>
+              <li>
+                The guide on the left gives the combination of weight plates required to meet the given load
+              </li>
+              <li>
+                You may toggle freely between lbs and kg
+              </li>
+              <li>
+                Some inputs may be rounded up/down to the nearest possible lb/kg conversion
+              </li>
+              <li>
+                The minimum load is 25kg (20kg empty bar + 2.5kg collar pair)
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>  
     </div>
   </body>
 </html> 
