border around canvas

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        
       <div class="ui four column centered grid">
         <div class="column">
-          <div class="ui raised segment">
+          <div class="ui segment">
             <div class="ui form">
               <div class="field">
                 <label>Weight</label>
@@ -46,7 +46,7 @@
 
       <div class="ui two column centered grid">
         <div class="column">
-          <div class="ui segment raised">
+          <div class="ui segment">
             <div class="ui small header" style="text-align:center;">Instructions</div>
             <div class="ui divider"></div>
             <ul>
