throws error if input is too large

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="ui two column centered grid">
         <div class="column">
           <div class="ui segment">
-            <div class="ui small header" style="text-align:center;">Instructions</div>
+            <div class="ui small header" style="text-align:center;">How-to</div>
             <div class="ui divider"></div>
             <ul>
               <li>
@@ -57,7 +57,7 @@
                 The gray block at the end of the weights represents a 2.5kg/5.5lb collar
               </li>
               <li>
-                The guide on the left gives the combination of weight plates required to meet the given load
+                The guide on the left gives the combination of weight plates required to meet the given load per side
               </li>
               <li>
                 You may toggle freely between lbs and kg
@@ -71,6 +71,7 @@
             </ul>
           </div>
         </div>
+        
       </div>  
     </div>
   </body>
