background added, but need to make it responsive;

--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <script src="./src/index.js"></script>
   </head>
   <body>
-    <div style="text-align:center">
+    <div class="top" style="text-align:center">
       <h1 id="header">Bar is Loaded</h1>
-
-       
       <div class="ui four column centered grid">
         <div class="column">
           <div class="ui segment">
