--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="top" style="text-align:center">
-      <h1 id="header">Bar is Loaded</h1>
+      <h1 id="header" style="color:white;font-size:4rem;">Bar is Loaded</h1>
       <div class="ui four column centered grid">
         <div class="column">
           <div class="ui segment">
