--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./src/index.js"></script>
   </head>
   <body>
-    <div class="top" style="text-align:center">
+    <div class="top-lvl" style="text-align:center">
       <h1 id="header" style="color:white;font-size:4rem;">Bar is Loaded</h1>
       <div class="ui four column centered grid">
         <div class="column">
