finally fixed background sizing

--- a/index.html
+++ b/index.html
@@ -3,38 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <title>Bar is Loaded</title>
-    <link rel="stylesheet" type="text/css" href="./styling/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
     <script src="./src/index.js"></script>
+    <link rel="stylesheet" type="text/css" href="./styling/style.css">
+
   </head>
   <body>
-    <div class="top-lvl" style="text-align:center">
+    <div style="text-align:center">
       <h1 id="header" style="color:white;font-size:4rem;">Bar is Loaded</h1>
       <div class="ui four column centered grid">
         <div class="column">
-          <div class="ui segment">
             <div class="ui form">
               <div class="field">
-                <label>Weight</label>
+                <label style="font-size: 1.3rem;">Weight</label>
                 <input id="weight" type="number" min="25"></input>
               </div>
               <div class="inline fields">
-                <label>Units:</label>
+                <label style="font-size: 1.1rem;">Units:</label>
                 <div class="field">
                   <div class="ui radio checkbox">
                     <input type="radio" name="unit" id="kg" checked="checked">
-                    <label>Kilograms</label>
+                    <label style="font-size: 1.1rem;">Kilograms</label>
                   </div>
                 </div>
                 <div class="field">
                   <div class="ui radio checkbox">
                     <input type="radio" name="unit" id="lb">
-                    <label>Pounds</label>
+                    <label style="font-size: 1.1rem;">Pounds</label>
                   </div>
                 </div>
               </div>
             </div>
-          </div>  
         </div>
 
         <div class="fifteen wide column" style="text-align:center;">
@@ -45,7 +44,7 @@
       <div class="ui two column centered grid">
         <div class="column">
           <div class="ui segment">
-            <div class="ui small header" style="text-align:center;">How-to</div>
+            <div class="ui small header" style="text-align:center;font-size: 1.3rem">How-to</div>
             <div class="ui divider"></div>
             <ul>
               <li>
