--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
 
   </head>
   <body>
-    <div id="header">
-      <h1 style="text-align:center;">Bar is Loaded</h1>
-      <i class="question circle outline big icon" style="position:fixed;top:1.5%;right:1%;"></i>
+    <h1 style="text-align:center;">Bar is Loaded</h1>
+    <div id="open-instructions">
+      <i class="question circle outline huge icon" style="position:fixed;top:1.5%;right:1%;"></i>
     </div>
-    <div class="hidden">
+
+    <div id="close-instructions" class="hidden">
+      <i class="close huge icon" style="position:fixed;top:1.5%;right:1%;"></i>
+    </div>
+
+    <div id="instructions" class="hidden">
       <img id="how-to" src="src/assets/how-to.jpeg">
     </div>
 
-    <div style="text-align:center">
+    <div id="main-content" style="text-align:center">
       <div class="ui four column centered grid">
         <div class="column">
             <div class="ui form">
